[package]
name = "main"
version = "0.1.0"
authors = ["molok"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
voxel = {path = "../voxel"}
vec = {path = "../vec"}
collider = {path = "../collider"}
rigidbody = {path = "../rigidbody"}
termsize = "0.1.6"
rand = "0.8.1"